2008-04-25  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Simon.

        networking: Use Qt::QueuedConnection in QNetworkReplyHandler

        Make sure we leave the networking backend before calling
        into WebCore. Otheriwse we might return to the networking
        backend when it is already deleted.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::FormDataIODevice::setParent):
        (WebCore::QNetworkReplyHandler::start):

2008-04-25  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Fix propagation of mouse double click events.

        Treat a mouse double click as a regular mouse press with just a different click count.

        * platform/qt/PlatformMouseEventQt.cpp:
        (WebCore::PlatformMouseEvent::PlatformMouseEvent):

2008-04-25  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Fixes: Fix strange button sizes (push, radio, and check) in QtWebKit.

        We now use pixel metrics instead of fixed sizes for the
        button margins, or if the style supports layout rects we
        use the delta between the content rect and the layout rect.

        In adition we compensate for the difference between the size
        for content and the actual layout rect (if supported) by
        reporting back the layout rect to WebKit for page layout,
        and then inflating the rect we actually paint to.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::StylePainter::StylePainter):
        (WebCore::StylePainter::~StylePainter):
        (WebCore::RenderThemeQt::RenderThemeQt):
        (WebCore::inflateButtonRect):
        (WebCore::RenderThemeQt::adjustRepaintRect):
        (WebCore::RenderThemeQt::isControlStyled):
        (WebCore::computeSizeBasedOnStyle):
        (WebCore::RenderThemeQt::setCheckboxSize):
        (WebCore::RenderThemeQt::paintCheckbox):
        (WebCore::RenderThemeQt::setRadioSize):